--- a/.github/workflows/main_webapplinuxab.yml
+++ b/.github/workflows/main_webapplinuxab.yml
@@ -17,12 +17,16 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
+          node-version: '16.10' # specify exact version if needed
+
+      - name: List directory contents
+        run: ls -al # for debug
 
       - name: npm install, build, and test
         run: |
+          cd ./your-directory # specify your directory containing package.json, if it's not in the root
           npm install
           npm run build --if-present
           npm run test --if-present
